5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1834_1277.log
== TEST (2019-06-27 20:51:47) 
-- CODE:
from numpy import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a/111-1
j=b/11-1
x=quadro(i,j)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 20:52:24) 
-- CODE:
from numpy import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a/111-1
j=b/11-1
x=quadro[i,j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 20:53:56) 
-- CODE:
from numpy import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a/111-1
j=b/111-1
x=quadro[i,j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 20:55:05) 
-- CODE:
from numpy import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a/111-1
j=b/111-1
x=quadro[i,j]
print(x)

-- EXECUTION TIME:
1.09407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 16, in <module>
    x=quadro[i,j]
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 20:56:14) 
-- CODE:
from numpy import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a/111-1
j=b/111-1
x=quadro[:,j]
x=quadro[i,:]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:06:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a/111-1
j=b/111-1
x=quadro[i,j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:07:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a/111-1
j=b/111-1
x=quadro[i:j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:08:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a/111-1
j=b/111-1
x=quadro[i][j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:08:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a//111-1
j=b//111-1
x=quadro[i][j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 21:09:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a//111-1
j=b//111-1
x=quadro[i][j]
print(x)

-- EXECUTION TIME:
0.991754
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 21:15:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a//111-1
j=b//111-1
x=quadro[i,j]
print(x)

-- EXECUTION TIME:
1.21586
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:15:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a//111-1
j=b//111-1
x=quadro[i,j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 21:15:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a//111-1
j=b//111-1
x=quadro[i,j]
print(x)

-- EXECUTION TIME:
1.01039
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:34:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a//111-100
j=b//111-100
x=quadro[i,j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:39:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=a//100=2>2-1=1
j=b//100=4>4-1=3
x=quadro[i,j]
print(x)

-- ERROR:
File "XXXX", line 15
    i=a//100=2>2-1=1
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:40:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=(a//100)-1
j=(b//100)-1
x=quadro[i,j]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 14:40:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=(a//100)-1
j=(b//100)-1
x=quadro[i,j]
print(x)

-- EXECUTION TIME:
0.967365
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 14:42:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("1 cidade: "))
b=int(input("2 cidade: "))

i=(a//111)-1
j=(b//111)-1
x=quadro[i,j]
print(x)

-- EXECUTION TIME:
1.27749
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
